--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
   <body id="" onload="">
      <script type="text/javascript">
         $(document).ready(function(){
-          $.getJSON("http://localhost/~vs/bls/index.php?controller=user&action=all&format=json&callback=?", function(users){
+          $.getJSON("http://94.247.168.234/bls/index.php?controller=user&action=all&format=json&callback=?", function(users){
             $.each(users, function(i, user){
          //     if (user.ap != 0){
                 $("<li id=\""+ user.id +"\" style=\"z-index: " + user.ap + "; font-size:"+ (parseInt(user.ap/100)+11) +"; top:"+ (3+Math.round(Math.random()*80)) +"%; left:"+ Math.round(Math.random()*98) +"%;\">").html("<span class=\"username\">" + user.username + "</span><span class=\"ap\">AP: " + thousandSeparator(user.ap, " ") + "</span>").appendTo("#users");
