Using jQuery from CDN instead.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Highscore</title>
-    <script src="jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
     <style type="text/css">
       html, body{
         height: 100%;
@@ -113,6 +112,7 @@
     </style>
   </head>
   <body id="" onload="">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js" type="text/javascript" charset="utf-8"></script>
      <script type="text/javascript">
      var usersWithAP = new Array();
         $(document).ready(function(){
