--- a/index_old.html
+++ b/index_old.html
@@ -2,7 +2,6 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>index</title>
-    <script src="jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
     <style type="text/css">
       body {
 
@@ -28,6 +27,8 @@
     </style>
   </head>
   <body id="index" onload="">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
 
         $(document).ready(function(){
